fix: avoid breaks in Card and CardContainer

--- a/frontend/src/components/Card/Card.css
+++ b/frontend/src/components/Card/Card.css
@@ -6,6 +6,9 @@
   border-radius: 10px;
   border: 1px solid #f5f5dc;
   background-color: #f5f5dc;
+  break-inside: avoid;
+  page-break-inside: avoid; /* Theoretically FF 20+ */
+  break-inside: avoid-column; /* Chrome, Safari, IE 11 */
 }
 
 .card-image {
@@ -13,6 +16,8 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
+  display: grid;
+  place-items: center;
 }
 
 @media screen and (max-width: 430px) {
